package pt.ipp.isep.dei.esoft.project.domain.client.mappers.dto;

/**
 * The type Owner dto.
 */
public class OwnerDTO extends ClientDTO{
    //TODO: make class (if needed)
    //      and mapper (if needed)
}
